<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"> <!-- Используем прозрачный фон -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"> <!-- Занимает все доступное пространство над кнопками -->

        <GridView
            android:id="@+id/widget_grid_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:numColumns="5"
            android:gravity="center"
            android:stretchMode="columnWidth"
            android:verticalSpacing="0dp"
            android:horizontalSpacing="0dp" />

        <!-- View, показываемый когда GridView пуст -->
        <TextView
            android:id="@+id/widget_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/widget_empty_text"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp"
            android:visibility="gone"
            tools:visibility="visible"/>

    </FrameLayout>

    <!-- Контейнер для кнопок внизу -->
    <RelativeLayout
        android:id="@+id/widget_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        >

        <!-- Кнопка "Звонилка" (в центре) -->
        <ImageButton
            android:id="@+id/widget_button_dialer"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerInParent="true"
            android:src="@drawable/dialer"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:visibility="gone"
            tools:visibility="visible"
            android:contentDescription="@string/widget_content_desc_dialer"/>

        <!-- Кнопка "Обновить" (справа) -->
        <ImageButton
            android:id="@+id/widget_button_refresh"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/refresh"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:visibility="gone"
            tools:visibility="visible"
            android:contentDescription="@string/widget_content_desc_refresh"/>

    </RelativeLayout>

</LinearLayout>